feat: Colab update

--- a/.env
+++ b/.env
@@ -1,28 +1,49 @@
-# name of model to use in weights folder
-CHAR_VOICE=
+# Public url from Google Colab, only required if running main_colab.py.
+# It should end with .ngrok-free.app
+COLAB_URL=
+
+# Experiment name and name of model to use in weights folder
+MODEL_NAME=
 
 # whether to pitch the converted voice up or down
-# use -12 for female to male, 12 for male to female, 0 for not change. Adjust if needed.
-PITCH_CHANGE=0
+# use -12 for female to male, 12 for male to female, 0 for no change. Adjust lower or higher if needed.
+PITCH_CHANGE=12
 
-# The volume of the converted voice when played between 0 (no sound) and 1 (max volume)
-OUTPUT_VOLUME=0.7
+# Closer to 0 mimicks volume of original vocals. Can make volume sound more natural.
+# Closer to 1 will be more consistent loud volume.
+VOLUME_ENVELOPE=0.25
 
-# crepe to use gpu for best quality and speed
-# harvest for better quality but slow
+# crepe to use gpu for best quality
+# harvest for ??? (not working)
 # pm for fast conversions
 PITCH_EXTRACTION_ALGO=crepe
 
-# name of .index file in logs/CHAR_VOICE/ folder
-# Leave blank if quality of training dataset is good
-INDEX_FILENAME=
-INDEX_RATE=
+# From 0 (Don't use index file) to 1 (Use index file, more bias towards sound quality/accent of training dataset)
+# Used to reduce/resolve the timbre leakage problem. Too high would cause artifacting.
+INDEX_RATE=0.88
 
 # which gpu to use
 GPU_INDEX=0
 
-# which key to hold to start recording voice
-RECORD_KEY=f
 
-# name of your microphone. Only required if error occurs
-MIC_NAME=
+### PUSH TO TALK KEY ###
+
+# which key to hold to start recording voice when speaking
+MIC_RECORD_KEY=f
+
+# If this is set, the script will hold down this key while playing audio.
+# For apps like Valorant with no Open Mic functionality, must be different from MIC_RECORD_KEY
+INGAME_PUSH_TO_TALK_KEY=
+
+
+### AUDIO DEVICE IDS ###
+
+# run the following command to obtain the IDs for your audio devices
+# runtime\python.exe AniVoiceChanger\get_audio_devices.py 
+
+# The mic you will be speaking into
+MICROPHONE_ID=
+
+# The input device to your speakers
+# Allows you to hear your converted voice
+SPEAKERS_INPUT_ID=
